--- a/11_configuracion_de_bases_de_datos.ipynb
+++ b/11_configuracion_de_bases_de_datos.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Bases de datos soportadas por *Django*.\n",
     "\n",
-    "El paquete *django.db.backends* contiene los artefactos o *engines* que *Django* puede utilizar para conectarse a las siguientes bases de datos.\n",
+    "El paquete ```django.db.backends``` contiene los motores o *engines* que *Django* puede utilizar para conectarse a las siguientes bases de datos.\n",
     "\n",
     "* *PostgreSQL*. Es el gestor de base de datos preferido por los desarrolladores de Django.\n",
     "* *MySQL*. Este *engine* no funciona correctamente con Python 3.\n",
@@ -123,7 +123,7 @@
     "\n",
     "### La configuración ```default```.\n",
     "\n",
-    "La clave por defecto es ```default```. Siempre dene de existir una comnfiguración d bases de datos con esta clave."
+    "La clave por defecto es ```default```. Siempre debe de existir una comnfiguración d bases de datos con esta clave."
    ]
   },
   {
@@ -137,7 +137,7 @@
     "        'ENGINE': 'django.db.backends.sqlite3',\n",
     "        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
     "    }\n",
-    "````"
+    "```"
    ]
   },
   {
@@ -156,7 +156,7 @@
     "* ```'NAME'```: indica el nombre de la base de datos.\n",
     "* ```'USER'```: indica el usuario con acceso a los recursos de la base da datos.\n",
     "* ```'PASSWORD'```: indica la contraseña del usuario con acceso a los recursos de la base da datos.\n",
-    "* ```'HOST```: Indica la URL en la que se encuentra escuchando el gestor de la base de datos.\n",
+    "* ```'HOST'```: Indica la URL en la que se encuentra escuchando el gestor de la base de datos.\n",
     "* ```'PORT'```: Indica el puerto en el que se encuentra escuchando el gestor de la base de datos."
    ]
   },
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma GNU/Linux."
+    "* Para la plataforma GNU/Linux y MacOS X."
    ]
   },
   {
@@ -414,7 +414,7 @@
    "source": [
     "### Inspección de una base de datos *MySQL* con ```ipython-sql```.\n",
     "\n",
-    "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*.\n",
+    "* La siguiente celda se conectará al servidor utilizando ```mysql-connector-python```.\n",
     "\n",
     "**Nota:** En caso de que la contraseña del usuario ```root``` sea distinta de ```0p3n5t4ck```,es necesario sustituirla donde corresponda."
    ]
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
+    "%sql mysql+mysqlconnector://root:0p3n5t4ckCDMX@localhost"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "source": [
     "### Inspección de una base de datos *SQLite* con ```ipython-sql```.\n",
     "\n",
-    "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*."
+    "* La siguiente celda se conectará al servidor utilizando ```mysql-connector-python```."
    ]
   },
   {
