--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -128,17 +128,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%cd tutorial"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -146,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas GNU/Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -153,7 +149,14 @@
    },
    "outputs": [],
    "source": [
-    "!cp ../src/13/alumnos.json alumnos.json"
+    "!cp src/13/alumnos.json tutorial/alumnos.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
    ]
   },
   {
@@ -162,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy ..\\src\\13\\alumnos.json alumnos.json"
+    "!copy src\\13\\alumnos.json tutorial\\alumnos.json"
    ]
   },
   {
@@ -182,12 +185,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!python manage.py startapp api"
+    "%cd tutorial"
    ]
   },
   {
@@ -198,7 +199,14 @@
    },
    "outputs": [],
    "source": [
-    "!tree api"
+    "!python manage.py startapp api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La aplicación tendrá una estructura similar a la siguiente:"
    ]
   },
   {
@@ -229,6 +237,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en GNU/Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -240,12 +255,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma basada en Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!copy ..\\src\\13\\settings.py tutorial\\settings.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La sustitución del archivo ```tutorial/settings.py``` puede ser verificada ejecutando la siguiente celda."
    ]
   },
   {
@@ -275,8 +304,21 @@
     "               path('main/', include('main.urls')),\n",
     "               path('api/', include('api.urls')),\n",
     "              ]\n",
-    "``` \n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* El archivo ```tutorial/urls.py``` será sustituido por ```src/13/tutorial_urls.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en GNU/Linux y MacOS X."
    ]
   },
   {
@@ -291,12 +333,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma basada en Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%copy ..\\src\\13\\tutorial_urls.py tutorial\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La sustitución del archivo ```tutorial/urls.py``` será visible ejecutando la siguiente celda."
    ]
   },
   {
@@ -324,6 +380,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El archivo ```api/urls.py``` será sustituido por ```src/13/tutorial_urls.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en GNU/Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -335,12 +405,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma basada en Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!copy ..\\src\\13\\api_urls.py api\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La sustitución del archivo ```api/urls.py``` puede ser verificada ejecutando la siguiente celda."
    ]
   },
   {
@@ -376,6 +460,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El archivo ```api/models.py``` será sustituido por el archivo ```src/13/models.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en GNU/Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -387,12 +485,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma basada en Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!copy ..\\src\\13\\models.py api\\models.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La sustitución del archivo ```api/models.py``` puede ser verificada ejecutando la siguiente celda."
    ]
   },
   {
@@ -445,6 +557,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El archivo ```api/views.py``` será sustituido por el archivo ```src/13/views.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en GNU/Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -456,12 +582,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma basada en Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!copy ..\\src\\13\\views.py api\\views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La sustitución del archivo ```api/views.py``` puede ser verificada ejecutando la siguiente celda."
    ]
   },
   {
@@ -555,6 +695,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%load_ext sql"
    ]
   },
@@ -564,24 +713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost/db_django"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda mostrará un listado de tablas en la base ```db_django```, la cual incluye a la tabla ```api_alumno```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "show tables;"
+    "%sql sqlite:///tutorial/db.sqlite3"
    ]
   },
   {
@@ -597,7 +729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql select * from api_alumno;"
+    "%sql SELECT * FROM api_alumno;"
    ]
   },
   {
