--- a/15_servidor_api_rest.ipynb
+++ b/15_servidor_api_rest.ipynb
@@ -11,9 +11,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Servidor API REST."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El servicio web localizado en ```api/```.\n",
+    "\n",
+    "En el capítulo [```13_operaciones_basicas _con_modelos.ipynb```](13_operaciones_basicas _con_modelos.ipynb) se creó la aplicación ```api``` la cual definió los siguiente *endpoints*:\n",
+    "\n",
+    "* ```api/```, el cual regresa un documento en formato *JSON* que contiene un listado de todos los datos almanceados en la tabla ```api_alumno``` la cual está ligada a los objetos instanciados de la clase ```api.models.Alumno```.\n",
+    "* ```api/carga```, la cual poblaría la base de datos ```api_alumno``` a partir de un archivo llamado ```alumnos.json```, localizado en el directorio ```tutorial```.\n",
+    "\n",
+    "En este capítulo se definirán *endpoints* que corresponden a la *URL*:\n",
+    "\n",
+    "```\n",
+    "api/<clave>\n",
+    "```\n",
+    "\n",
+    "* Donde ```<clave>``` es corresponde a un número de 4 dígitos.\n",
+    "\n",
+    "Dependiendo del método mediante el cual se accede a dicha *URL*, se pueden realizar las siguientes operaciones.\n",
+    "\n",
+    "* Al acceder a la *URL* mediante el método ```GET```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```clave``` corresponda al número de la *URL*. En caso de no existir, regresará un estado ```404```.\n",
+    "* Al acceder a la *URL* mediante el método ```POST```, el sevidor intentará crear una instancia de la clase ```api.models.Alumno``` cuyo tributo ```clave```corresponderá al número de la *URL*. El servidor verificará que los datos enviados tengan la estructura y contenido adecuado. En caso de ser así, regresará un documento *JSON* con el estado del objeto creado. En caso de que ya exista un objeto cuyo atributo clave sea igual al de la *URL* o no tenga los datos o no tenga la estructura adecuada, el servidor regresará un error ```400```.\n",
+    "* Al acceder a la *URL* mediante el método ```DELETE```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```clave``` corresponda al número de la *URL* y lo eliminará de la base de datos. En caso de no exisitir, regresará un estado ```404```.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reglas de los campos.\n",
+    "\n",
+    "* Los campos ```nombre```, ```primer_apellido```, ```segundo_apellido``` y ```carrera``` son cadenas de caracteres.\n",
+    "* El campo ```carrera``` debe corresponder a una carrera válida.\n",
+    "* El campo ```semestre``` es un número entero mayor que cero.\n",
+    "* El campo ```promedio``` es un número que va de 0 a 10.\n",
+    "* El campo ```al_corriente``` es un booleano.\n",
+    "* El campo ```segundo_apellido``` es opcional, todos los demás son obligatorios."
    ]
   },
   {
@@ -29,7 +76,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo *src/16/urls.py* contiene lo siguiente:\n",
+    "## Definición de las *URLs*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo ```src/15/urls.py``` contiene lo siguiente:\n",
     "\n",
     "``` python \n",
     "from django.urls import path, re_path\n",
@@ -38,7 +92,23 @@
     "urlpatterns = [path('', views.vista),\n",
     "               path('carga', views.carga),\n",
     "               re_path(r'^(?P<clave>[0-9]{4}$)', endpoint_views.clave),]\n",
-    "```"
+    "```\n",
+    "\n",
+    "En donde se define una relación entre un patrón que corresponde a una expresión regular que identifca a un número de 4 dígitos y la función ```clave()``` del módulo ```endpoint_views```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuación se sustituirá el archivo ```api/urls.py``` con el archivo ```src/15/ursl.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en GNU/Linux o MacOS X."
    ]
   },
   {
@@ -47,7 +117,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp ../src/16/urls.py api/urls.py"
+    "!cp ../src/15/urls.py api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas basadas en Windows."
    ]
   },
   {
@@ -56,7 +133,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy ..\\src\\16\\urls.py api\\urls.py"
+    "!copy ..\\src\\15\\urls.py api\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La sustitución del archivo ```api/ursl.py``` puede ser verificada desde la siguiente celda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat api\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El archivo ```endpoint_views.```\n",
+    "\n",
+    "Este archivo es contiene a la función de vista ```clave()```, la cual es capaz de procesar los métodos ```GET```, ```POST``` y ```DELETE```."
    ]
   },
   {
@@ -68,16 +170,28 @@
     "from django.views.decorators.csrf import csrf_exempt\n",
     "from django.http import JsonResponse, HttpResponseNotFound, HttpResponseBadRequest\n",
     "\n",
-    "campos = {'numero_de_cuenta':(int, True), 'nombre':(str, True), 'primer_apellido':(str, True),\n",
-    "          'segundo_apellido':(str, False), 'carrera':(str, True), 'semestre':(int, True),\n",
-    "          'promedio':(float, True), 'al_corriente':(bool, True)}\n",
+    "\"\"\" El objeto campos define la estructura de los campos aceptables para\n",
+    "los datos relacionando el nombree del campo y una tupla que cuyo primer\n",
+    "elemento es el tipo de dato del que se trata y el segundo elemento es \n",
+    "un booleano que indica si el campo es obligatorio. \"\"\" \n",
+    "campos = {'numero_de_cuenta':(int, True), \n",
+    "          'nombre':(str, True), \n",
+    "          'primer_apellido':(str, True),\n",
+    "          'segundo_apellido':(str, False), \n",
+    "          'carrera':(str, True), \n",
+    "          'semestre':(int, True),\n",
+    "          'promedio':(float, True), \n",
+    "          'al_corriente':(bool, True)}\n",
     "\n",
+    "\"\"\"El objeto carreras contiene una tupla con las carreras permitidas en el campo carrera.\"\"\" \n",
     "carreras = ('Sistemas', 'Derecho', 'Actuaría', 'Arquitectura', 'Administración')\n",
     "\n",
+    "\"\"\"El objeto estructura_base es un objeto de tipo set que contiene los campos permitidos.\"\"\"\n",
     "estructura_base = set(campos)\n",
     "\n",
     "\n",
     "def reglas(valor, campo):\n",
+    "    \"\"\" Función que valida las reglas de negocio \"\"\"\n",
     "    if campo == \"carrera\" and valor not in carreras:\n",
     "        return False\n",
     "    elif campo == \"semestre\" and valor < 1:\n",
@@ -91,6 +205,7 @@
     "\n",
     "    \n",
     "def valida(dato, campo):\n",
+    "    \"\"\" Función que valida un dato con relación a su campo correspondiente.\"\"\"\n",
     "    tipo = campos[campo][0]\n",
     "    try:\n",
     "        if tipo is not str:\n",
@@ -157,12 +272,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!cp ../src/16/endpoint_views.py api/endpoint_views.py"
+    "* Se copiará el archivo ```src/15/endpoint_views.py``` al directorio ```api\\```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para plataformas basadas en GNU/Linux o MacOS X."
    ]
   },
   {
@@ -171,7 +291,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy ..\\src\\16\\endpoint_views.py api\\endpoint_views.py"
+    "!cp ../src/15/endpoint_views.py api/endpoint_views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para plataformas basadas en Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\15\\endpoint_views.py api\\endpoint_views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda permite verificar la copia del archivo ```src/15/endpoint_views.py``` al directorio ```api\\```."
    ]
   },
   {
