--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La declaración *block*.\n",
+    "### La estructura ```{% block %} ...  {%endblock%}```.\n",
     "\n",
     "Esta declaración le asigna un nombre al bloque que delimita.\n",
     "\n",
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La declaración *extends*.\n",
+    "### La declaración ```{% extends %}```.\n",
     "\n",
     "Es posible crear una nueva plantilla partir de mediante la siguiente sintaxis:\n",
     "\n",
@@ -326,7 +326,7 @@
     "\n",
     "Dentro de la apliación *api* se crearán 2 nuevas reglas de URL, cuyas funciones de vista regresarán una plantilla.\n",
     "\n",
-    "El archivo *src/19/urls.py contiene lo siguiente:\n",
+    "El archivo *src/18/urls.py contiene lo siguiente:\n",
     "\n",
     "```python\n",
     "from django.urls import path, re_path\n",
@@ -697,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
