--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "* ```all()``` va a traer un iterador que contiene a todos los objetos instanciados de la subclase de ```django.db.Model```.\n",
     "* ```get()``` va a traer a un objeto que cumpla con una expresión.\n",
-    "* ```filter()``` realiza búsquedas medainte expresiones lógicas."
+    "* ```filter()``` realiza búsquedas mediante expresiones lógicas."
    ]
   },
   {
