--- a/15_servidor_api_rest.ipynb
+++ b/15_servidor_api_rest.ipynb
@@ -44,9 +44,9 @@
     "\n",
     "Dependiendo del método mediante el cual se accede a dicha *URL*, se pueden realizar las siguientes operaciones.\n",
     "\n",
-    "* Al acceder a la *URL* mediante el método ```GET```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```clave``` corresponda al número de la *URL*. En caso de no existir, regresará un estado ```404```.\n",
-    "* Al acceder a la *URL* mediante el método ```POST```, el sevidor intentará crear una instancia de la clase ```api.models.Alumno``` cuyo tributo ```clave```corresponderá al número de la *URL*. El servidor verificará que los datos enviados tengan la estructura y contenido adecuado. En caso de ser así, regresará un documento *JSON* con el estado del objeto creado. En caso de que ya exista un objeto cuyo atributo clave sea igual al de la *URL* o no tenga los datos o no tenga la estructura adecuada, el servidor regresará un error ```400```.\n",
-    "* Al acceder a la *URL* mediante el método ```DELETE```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```clave``` corresponda al número de la *URL* y lo eliminará de la base de datos. En caso de no exisitir, regresará un estado ```404```.\n"
+    "* Al acceder a la *URL* mediante el método ```GET```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```numero_de_cuenta``` corresponda al número de la *URL*. En caso de no existir, regresará un estado ```404```.\n",
+    "* Al acceder a la *URL* mediante el método ```POST```, el sevidor intentará crear una instancia de la clase ```api.models.Alumno``` cuyo tributo ```numero_de_cuenta```corresponderá al número de la *URL*. El servidor verificará que los datos enviados tengan la estructura y contenido adecuado. En caso de ser así, regresará un documento *JSON* con el estado del objeto creado. En caso de que ya exista un objeto cuyo atributo clave sea igual al de la *URL* o no tenga los datos o no tenga la estructura adecuada, el servidor regresará un error ```400```.\n",
+    "* Al acceder a la *URL* mediante el método ```DELETE```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```numero_de_cuenta``` corresponda al número de la *URL* y lo eliminará de la base de datos. En caso de no exisitir, regresará un estado ```404```.\n"
    ]
   },
   {
