--- a/17_plantillas_de_django.ipynb
+++ b/17_plantillas_de_django.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *src/18/base.html* contiene el siguiente texto que corresponde  una plantilla básicas que combina código en HTML y etiquetas basadas en el *lenguaje de plantillas de Django*.\n",
+    "El archivo ```src/17/base.html``` contiene el siguiente texto que corresponde  una plantilla básicas que combina código en HTML y etiquetas basadas en el *lenguaje de plantillas de Django*.\n",
     "\n",
     "``` HTML\n",
     "<!DOCTYPE html>\n",
@@ -105,24 +105,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import django.template"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(django.template)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -146,6 +128,13 @@
     "```\n",
     "Context(<objeto tipo dict>)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Susitución de datos de contexto en una plantila."
    ]
   },
   {
@@ -234,16 +223,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
    "source": [
     "!copy src\\17\\settings.py tutorial\\tutorial\\settings.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,9 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\josech\\\\Dropbox\\\\Documentos\\\\py201\\\\tutorial'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.BASE_DIR"
    ]
@@ -316,9 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ya existe el subdirectorio o el archivo tutorial\\templates.\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir tutorial\\templates"
    ]
@@ -415,16 +431,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
    "source": [
     "!copy src\\17\\ejemplo.html tutorial\\templates\\"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
