--- a/16_cliente_api_rest.ipynb
+++ b/16_cliente_api_rest.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.get(\"http://localhost:5000/api/1221\")"
+    "respuesta = requests.get(\"http://localhost:5000/api/1223\")"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos ={'nombre':'Ramiro', 'primer_apellido':'Salas',\n",
+    "datos ={'nombre':'Ramiro', 'primer_apellido':'Salas', 'segundo_apellido':'Pérez',\n",
     "        'carrera':'Derecho', 'semestre':1, 'promedio':8, 'al_corriente':True,}"
    ]
   },
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.post(\"http://localhost:5000/api/1226\", data=datos)"
+    "respuesta = requests.post(\"http://localhost:5000/api/1227\", data=datos)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.delete(\"http://localhost:5000/api/1225\")"
+    "respuesta = requests.delete(\"http://localhost:5000/api/1224\")"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
